changes in the interface movile first

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,4 @@
-* {
-  box-sizing: border-box;
-}
+
 
 body {
   font-family: sans-serif;
@@ -13,42 +11,12 @@ body {
   overflow: hidden;
 }
 
-h1 {
-  margin-top: 0;
-  font-size: 22px;
-}
-
-h2 {
-  margin-top: 0;
-  font-size: 20px;
-}
-
-h3 {
-  margin-top: 0;
-  font-size: 18px;
-}
-
-h4 {
-  margin-top: 0;
-  font-size: 16px;
-}
-
-h5 {
-  margin-top: 0;
-  font-size: 14px;
-}
-
-h6 {
-  margin-top: 0;
-  font-size: 12px;
-}
-
-code {
-  font-size: 1.2em;
-}
-
-ul {
-  padding-inline-start: 20px;
+.button-start-container{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
 .button-start{
@@ -61,12 +29,9 @@ ul {
   border: solid #4bcc00 2px;
   box-shadow: none;
   border-radius: 50px;
-  align-items: center;
   cursor: pointer;
-  margin: 0;
-  position: absolute;
-  top: 80%;
-  left: 47%;
+  margin-bottom: 3em;
+
 }
 
 .button-start:hover{
@@ -88,25 +53,12 @@ ul {
   text-align: center;
   width: 90%;
   height: 95vh;
-  bottom: 2%;
-  right:5%;
+  bottom: 1%;
+  right:2.5%;
   z-index: 100;
 }
 
-.square {
-  background-color: rgba(255, 255, 255, 0.5);
-  border: 1px solid #000000;
-  float: left;
-  font-size: 220px;
-  font-weight: bold;
-  line-height: 34px;
-  height: 260px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 0;
-  text-align: center;
-  width: 260px;
-}
+
 
 .board-row:after {
   clear: both;
@@ -115,46 +67,77 @@ ul {
 }
 
 .grid-game{
+  width:auto;
+  height: 100vh;
+  margin: 10px;
   display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-flow: column;
+  row-gap: 0.5em;
+
 }
 
 .board{
-  width: 55%;
-  padding: 105px 0px 105px 125px;
+display: flex;
+align-self: center;
+}
+
+.board-row{
+  margin: 0px;
+  width: 7em;
+}
+
+.square {
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 1px solid #000000;
+  font-size: 220px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 0.5em;
+  width: 0.5em;
+  padding: 0;
+  text-align: center;
 
 }
 
 .player-info{
-  width: 45%;
+  display: flex;
+  height: 35%;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.5);
-  border: 20px;
+  border: 15px;
   border-style: double;
-  border-radius: 25px;
-  margin: 75px; 
-  overflow: hidden;
+  border-radius: 20px;
+  padding: 1em;
+  gap: 1em;
 }
 
 .status {
   width:100%;
-  padding: 20px 15px 25px 15px;
   text-align: center;
-  font-size: 80px;
+  font-size: 40px;
+  
 }
 
 .status-image{
   width: 100%;
-  height: 60vh;
+  height: 50vh;
   background: no-repeat;
   background-size: contain;
+  background-position: center;
+  
 }
 
 .button-restart{
   font-family: Bebas Neue;
   font-weight: 400;
-  font-size: 25px;
+  font-size: 20px;
   color: #fff;
   background-color: #d4941ba0;
-  padding: 10px 30px;
+  padding: 5px 25px;
   border: solid #000000 2px;
   box-shadow: none;
   border-radius: 50px;
@@ -162,183 +145,91 @@ ul {
 }
 
 .center-div{
-  width: 100%;
-  height: 20%;
-  background-color: rgba(255, 255, 255, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-/* Large desktop /////////////////////////////////////////////////////////////////////// MEDIA
-@media (min-width: 1200px) { ... }
- 
-/* Portrait tablet to landscape and desktop */
-@media (min-width: 768px) and (max-width: 979px) { 
-  .button-start{
-    background-color: #0e0e0dc7;
-    left:43%;
+/*///////////////////////////////////////*/
+@media (min-width: 992px) and (max-width: 1400px){  
+  
+  .player-faces{
+    width: 95%;
+    bottom: 1%;
+    right:1.5%;
+
   }
+
+.grid-game{
+  flex-flow: row;
+  column-gap: 0.5em;
+  margin: 15px;
+}
+
+.board-row{
+  width: 14em;
+}
+
+.square {
+  height: 1em;
+  width: 1em;
+}
+
+.player-info{
+  width: 45%;
+  height: 90%;
+  align-self: stretch;
+  padding: 25px;
+}
+
+.status {
+  font-size: 60px;
+  
+}
+
+.status-image{
+
+  background-size: cover;
+}
+}
+
+@media (min-width: 1400px){
 
   .player-faces{
-    width: 90%;
-    height: 95vh;
-    bottom: 7%;
-    right:7%;
+    width: 95%;
+    bottom: 1%;
+    right:1.5%;
+
   }
 
-  .grid-game{
-    display:block;
-  }
+.grid-game{
+  flex-flow: row;
+  column-gap: 5em;
+  margin: 15px;
+}
 
-  .board{
-    width: 50%;
-    padding: 10px;
-    margin: 10px;
-  
-  }
+.board-row{
+  width: 14em;
+}
 
-  .player-info{
-    width: 50%;
-    overflow: hidden;
-  }
+.square {
+  height: 1em;
+  width: 1em;
+}
 
-  .square {
-    width: 30%;
-  }
+.player-info{
+  max-width: 45%;
+  height: 80%;
+  align-self: center;
+  padding: 35px;
+}
 
-  .status {
-    padding: 10px;
-    font-size: 35px;
-  }
-  
-  .status-image{
-    width: 100%;
-    height: 65%;
-    background-position: center;
-    background-size:contain;
-    margin:0;
-  }
+.status {
+  font-size: 60px;
+}
 
-  .button-restart{
-    top: 90%;
-    left: 30%;
-    display: block;
-    padding: 8px 30px;
-  }
- 
- } 
- 
-/*Landscape phone to portrait tablet */
-@media (max-width: 767px) {
+.status-image{
 
-.button-start{
-    background-color: #0e0e0dc7;
-    left: 33%;
-  }
-
-  .player-faces{
-    width: 90%;
-    height: 95vh;
-    bottom: 7%;
-    right:7%;
-  }
-
-  .grid-game{
-    display:block;
-  }
-
-  .board{
-    width: 100%;
-    padding: 35px;
-    margin-left: 7px;
-  
-  }
-
-  .player-info{
-    width: 100%;
-    border: 10px;
-    margin: auto;
-    padding-bottom: 10px;
-  }
-
-  .square {
-    width: 105px;
-    height: 105px;
-  }
-
-  .status {
-    padding: 20px 15px 25px 15px;
-    font-size: 35px;
-  }
-  
-  .status-image{
-    width: auto;
-    height:260px;
-    background-position: center;
-    
-  }
-
-  .button-restart{
-    top: 90%;
-    left: 30%;
-    padding: 8px 30px;
-  }
- }
- 
-/* Landscape phones and down */
-@media (max-width: 480px) {  /*iphone12 pro*/
-
-  .button-start{
-    background-color: #0e0e0dc7;
-    left: 33%;
-  }
-
-  .player-faces{
-    width: 90%;
-    height: 95vh;
-    bottom: 7%;
-    right:7%;
-  }
-
-  .grid-game{
-    display:block;
-  }
-
-  .board{
-    width: 100%;
-    padding: 10px;
-    margin-left: 5%;
-  
-  }
-
-  .player-info{
-    width: 100%;
-    height: 47vh;
-    overflow: hidden;
-  }
-
-  .square {
-    width: 30%;
-  }
-
-  .status {
-    padding: 10px;
-    font-size: 35px;
-  }
-  
-  .status-image{
-    width: 100%;
-    height: 65%;
-    background-position: center;
-    background-size:contain;
-    margin:0;
-  }
-
-  .button-restart{
-    top: 90%;
-    left: 30%;
-    display: block;
-    padding: 8px 30px;
-  }
- }
+  background-size: cover;
+}
+}
