--- a/src/styles.css
+++ b/src/styles.css
@@ -98,7 +98,7 @@ align-self: center;
   width: 0.5em;
   padding: 0;
   text-align: center;
-
+  box-sizing: border-box;
 }
 
 .player-info{
@@ -209,16 +209,16 @@ align-self: center;
 }
 
 .board-row{
-  width: 14em;
+  width: 17em;
 }
 
 .square {
-  height: 1em;
-  width: 1em;
+  height: 1.2em;
+  width: 1.2em;
 }
 
 .player-info{
-  max-width: 45%;
+  min-width: 25%;
   height: 80%;
   align-self: center;
   padding: 35px;
